--- a/static/css/sd/sd_employee_view.css
+++ b/static/css/sd/sd_employee_view.css
@@ -321,18 +321,29 @@ hr {
 
 /* DOCUMENT TABLE */
 .doc-header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
+    display: flex !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
 }
 
+.doc-header span {
+    position: relative;
+    top: -4px;
+    margin: 0;
+}
+
+
+
 .doc-table {
+    position: relative;
+    top: -5px; /* adjust value */
     width: 100%;
     border-collapse: collapse;
     background: #fff;
     border-radius: 10px;
     overflow: hidden;
 }
+
 
 .doc-table th, .doc-table td {
     padding: 14px;
@@ -537,14 +548,15 @@ hr {
 .modal {
     display: none; 
     position: fixed;
-    z-index: 9999; /* Ensure it stays on top of sidebar */
+    z-index: 9999;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Dim background */
+    background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(3px);
 }
+
 
 /* --- Modal Box --- */
 .modal-content {
@@ -569,10 +581,12 @@ hr {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #eee;
-    padding-bottom: 15px;
-    margin-bottom: 20px;
 }
+.modal-body {
+    display: flex;
+    flex-direction: column;
+}
+
 
 .modal-header h3 {
     margin: 0;
@@ -651,4 +665,7 @@ hr {
 
 .form-body::-webkit-scrollbar { 
     display: none; 
+}
+a.edit-btn[href*="sd_documents_view"] {
+    display: none !important;
 }
